--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!-- Project Name: JavaJam Coffee House (HW5)
 Author: Kay Gilman
-Date Last Modified: 3/24/2019 -->
+Date Last Modified: 3/24/2019 
+
+Don't double-space html/css files
+nav goes in body
+Missing main tag area
+-->
 
 <!DOCTYPE html>
 <html>
