--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,9 @@
 <!-- Project Name: JavaJam Coffee House (HW5)
 Author: Kay Gilman
-Date Last Modified: 3/24/2019 -->
+Date Last Modified: 3/24/2019
+
+Missing menu page details...
+ -->
 
 
 <!DOCTYPE html>
